# OpenGA

./: .gitignore  Dockerfile  LICENSE  README.md  start.sh
data/NASA-GRIP/: GHRC_URLs.txt
data/NASA-GRIP/GRIP-MMS/: NASA_GRIP_MMS.csv  NASA_GRIP_MMS_master.csv
data/anemometer/: dataset_daily.csv  dataset_hourly.csv  process_raw_data.py
data/bunny/: cleanedCorrs.txt  good_correspondences.txt  targetkps.pcd
data/cube/Cube_PCDs_1728pts_0.5edge_X120Y90Z45_var_v0/: MSE_SVD.m
include/: gaalet
include/gaalet-0.2/cpp/benchmarks/: Horizon.cpp  VectorAdd.cpp  VectorMultiply.cpp
include/gaalet-0.2/cpp/tests/: Basic.cpp  ConfModel.cpp  (+6 more)
scripts/GAAFs_poseEstimation/: README.txt
scripts/GAAFs_poseEstimation/Simulations/Scripts/Cpp/GA-LMS_bunny/: CMakeLists.txt  command_to_run.sh  main.cpp
scripts/GAAFs_poseEstimation/Simulations/Scripts/Cpp/GA-LMS_cube/: CMakeLists.txt  command_to_run.sh  main.cpp
scripts/GAAFs_poseEstimation/python/: bunny_registration.py  plot_pcds.py
scripts/GAAFs_standard/matlab/: gaafs.m  gaafs_to_edit_figs_for_thesis.m  import_EMSE.m  import_EMSE_theory.m  import_MSE.m  import_MSE_theory.m  import_W.m
scripts/GAAFs_standard/python/: gaafs.py
scripts/TSP_GAAFs/: README.txt
scripts/TSP_GAAFs/python/: TSP_gaafs.py
scripts/linear_prediction_complete/python/: create_dataframe.py  main_complete.py  main_rotors.py
scripts/wind_prediction/: create_dataframe.py  main.py
scripts/wind_prediction/common/: constants.py
scripts/wind_prediction/python/: create_dataframe.py  main.py
src/: commands_for_GAAFs
src/GAAFs_standard/GA-LMS/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_complex/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_linpred/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_real/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_real_linpred/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_rotors/: CMakeLists.txt  main.cpp
src/GAAFs_standard/GA-LMS_rotors_linpred/: CMakeLists.txt  load_csv.cpp  main.cpp
src/GAAFs_standard/GA-LMS_rotors_linpred/headers/: array_operators.h
src/GA_Kernel/: CMakeLists.txt  main.cpp
src/GA_Kernel/headers/: array_operators.h
tutorials/: Matlab_example_GA-LMS_standard.ipynb  Python2.7_example_GA-LMS_standard.ipynb
(+546 files in other folders)
